tests/invalid/entry_invalid_return_type.wio
fn Entry() -> bool {
    return true;
}
